--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,28 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Project 1</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <svg width="800" height="500"></svg>
+    <div id="DropDown"></div>
+    <svg></svg>
+    <div class = "slider">
+      <div style="font: 14px Arial; text-align: center;">Bin Size Modifier</div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+      <div class = "slider_inside" ></div>
+    </div>
     <div id="root"></div>
     
     <!--
+       onload="loadData()" onresize= "visualizeData();"
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
