--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,19 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="DropDown"></div>
     <svg></svg>
+    <div class="ginfo">ATTRIBUTE INFO:</div>
     <div class = "slider">
       <div style="font: 14px Arial; text-align: center;">Bin Size Modifier</div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
-      <div class = "slider_inside" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
+      <div class = "touch_controller" ></div>
     </div>
     <div id="root"></div>
     
